--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/design.css
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/design.css
@@ -139,6 +139,12 @@ a {
 	margin-top: 25px;
 }
 
+#loading-sidebar{
+	margin-top: 50px;
+	display: none;
+
+}
+
 .lds-roller {
 	display: inline-block;
 	position: relative;
@@ -624,6 +630,7 @@ hr {
 	margin: 1em 0;
 	margin-top: 1.5em;
 	padding: 0;
+	width: calc(275px / 1.2);
 }
 
 /*****************************
