--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/design.css
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/design.css
@@ -235,7 +235,7 @@ a {
 	style for each movie, within the result container
 *****************************/
 
-#movie-container {
+.movie-container {
 	/*
 	this div, and only this div, is positioned above sidebar menu
 	even though sidebar menu has higher z-index
@@ -263,28 +263,28 @@ a {
 
 }
 
-#movie-container img {
+.movie-container img {
 	width: 105px;
 	height: 100%;
 	padding: 10px 0 10px 10px;
 	box-sizing: border-box;
 }
-#movie-container #text {
+.movie-container #text {
 	flex-grow: 1;
 	box-sizing: border-box;
 	overflow-y: hidden;
 	margin: 10px 0 10px 10px;
 }
-#movie-container #title-year {
+.movie-container #title-year {
 	font-size: 32px;
 	vertical-align: top;
 }
-#movie-container #actors, #movie-container #awards {
+.movie-container #actors, .movie-container #awards {
 	display: inline-block;
 	margin-top: 0;
 	font-size: 18px;
 }
-#movie-container #rating {
+.movie-container #rating {
 	background: var(--main-red);
 	padding: 0;
 	min-width: 11%;
@@ -298,16 +298,16 @@ a {
 	align-items: center;
 	/* align vertical */
 }
-#movie-container #rating i {
+.movie-container #rating i {
 	font-size: 20px;
 	color: #FFD700;
 	text-shadow: 0 0 3px #000;
 	margin-right: 5px;
 }
-#movie-container #rating #rating-score {
+.movie-container #rating #rating-score {
 	font-size: 30px;
 }
-#movie-container #rating #rating-max {
+.movie-container #rating #rating-max {
 	font-size: 18px;
 	color: #696969;
 }
@@ -727,7 +727,7 @@ hr {
 		/*transition: color 0.2s ease;*/
 		/*cursor: pointer;*/
 	}
-	#movie-container:hover {
+	.movie-container:hover {
 		cursor: pointer;
 
 		transform: scale(1.03);
@@ -775,7 +775,7 @@ hr {
 	#main-search-button{
 		font-size: 18px;
 	}
-	#movie-container {
+	.movie-container {
 		width: 94%;
 		height: 160px;
 		margin-top: 15px;
@@ -783,38 +783,38 @@ hr {
 		box-shadow: none;
 		transition-property: none;
 	}
-	#movie-container:hover, #movie-container:focus, #movie-container:active {-webkit-transform: none;
+	.movie-container:hover, .movie-container:focus, .movie-container:active {-webkit-transform: none;
 		transform: none;
 		-moz-transform: none;
 		-ms-transform: none;
 
 		/*is this necessary, now that i've used media query for selection of devices with cursors?*/
 	}
-	#movie-container img {
+	.movie-container img {
 		width: 85px;
 		height: 100%;
 	}
-	#movie-container #text {
+	.movie-container #text {
 		margin: 5px 0 0 5px;
 	}
-	#movie-container #text #title-year {
+	.movie-container #text #title-year {
 		font-size: 22px;
 	}
-	#movie-container #text #actors, #movie-container #text #awards {
+	.movie-container #text #actors, .movie-container #text #awards {
 		font-size: 14px;
 	}
-	#movie-container #rating {
+	.movie-container #rating {
 		padding: 0 9px 0 9px;
 		flex-grow: 0.1;
 		min-width: 13%
 	}
-	#movie-container #rating i {
+	.movie-container #rating i {
 		font-size: 15px;
 	}
-	#movie-container #rating #rating-score {
+	.movie-container #rating #rating-score {
 		font-size: 22px;
 	}
-	#movie-container #rating #rating-max {
+	.movie-container #rating #rating-max {
 		font-size: 15px;
 		display: none;
 	}
