--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/testcss.css
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/testcss.css
@@ -4,13 +4,15 @@
 
 :root {
     /*variables*/
-    --main-yellow: #f4cb84;
+    --dark-beige: #f4cb84;
     --main-red: #f38363;
     --secondary-red: #ec344a;
     --secondary-red-alt: #f07563;
     --accept-green: #00e500;
     --background-grey: #e7d2cc;
     --gold: #FFD700;
+
+    --light-beige: #ffe4b3;
 
     --icon-distance: 0.5em;
     --icon-distance-secondary: 0.2em;
@@ -30,6 +32,18 @@
     display: none;
 }
 
+.curved {
+    position: absolute;
+    top: 0;
+    background: var(--light-beige);
+    height: 55vh;
+    border-bottom-left-radius: 40% 5%;
+    border-bottom-right-radius: 40% 5%;
+    width: 100%;
+    z-index: -5;
+}
+
+
 /*****************************
 	reset/general
 *****************************/
@@ -43,18 +57,63 @@ html {
     background-size: cover;
     color: black;
     font-family: 'Montserrat', sans-serif;
-    background-color: var(--main-yellow);
+    background-color: var(--dark-beige);
     text-align: center;
     margin: 0;
     font-size: var(--fontsize-text);
 }
 html, body, #container, #result-container {
     height: 100%;
-    margin-top: 0;
+    margin: 0;
 }
 a {
     text-decoration: none;
     color: inherit;
+}
+
+/*****************************
+	img, title search bar and result container
+*****************************/
+
+#title{
+    font-family: var(--font-title-main);
+    font-weight: normal;
+    font-size: 45px;
+    display: block;
+}
+
+#search-box:focus, #search-form button{
+    outline: none;
+}
+
+#logo img {
+    margin-top: 35px;
+    width: 250px;
+    height: 250px;
+}
+
+#main-search-button{
+    padding: 0.5em 0;
+    width: 65px;
+    font-size: 20px;
+    margin-left: var(--icon-distance);
+    box-shadow: 0 0 .3em rgba(0, 0, 0, 0.25);
+
+}
+
+#search-form input {
+    padding: 10px;
+    font-size: 17px;
+    border: 1px solid grey;
+    width: 35%;
+    background: #f1f1f1;
+}
+
+#result-container{
+    background-color: var(--dark-beige);
+
+    margin-top: 10px;
+    padding: 7px;
 }
 
 /*****************************
@@ -71,10 +130,12 @@ a {
     fixed by adding z-index: 1; to sidebar
     */
 
-    width: 65%;
-    height: 165px;
+    position: relative;
+
+    width: 100%;
+    height: 160px;
+    margin: 5px auto;
     background-color: var(--background-grey);
-    margin: 15px auto 0;
     text-align: left;
 
     display: flex;
@@ -83,38 +144,53 @@ a {
 }
 
 .movie-container img {
-    width: 105px;
     height: 100%;
-    padding: 10px 0 10px 10px;
     box-sizing: border-box;
+    width: 85px;
+
 }
 .movie-container .text {
     margin: 0.5em;
     box-sizing: border-box;
     overflow-y: hidden;
-    font-size: var(--fontsize-text-large);
+    font-size: var(--fontsize-text);
     flex-grow: 1;
 
 }
 .movie-container .title-year {
-    font-size: var(--fontsize-title-small);
+    font-size: var(--fontsize-text-large);
 }
 .movie-container .actors, .movie-container .awards {
     display: block;
-    margin-top: 0.2em;
 
     /*line-clamp hides the rows after n:th row*/
     display: -webkit-box;
-    -webkit-line-clamp: 4;
     -webkit-box-orient: vertical;
     overflow: hidden;
+
+    font-size: 14px;
+    -webkit-line-clamp: 3;
+    margin-top: 0.5em;
 }
-.movie-container .rating {
+.movie-container .rating-container {
+    position: relative;
+    top: 0px;
+    right: 0px;
+    height: 65px;
+    width: 65px;
+    text-align: center;
+    border-bottom-left-radius: 100% ;
+
     background: var(--main-red);
-    min-width: 11%;
 
     flex-grow: 0;
     flex-shrink: 0;
+}
+
+.movie-container .rating{
+    margin-right: -5px;
+    margin-top: 15px;
+
     display: flex;
     /*allows centering*/
     justify-content: center;
@@ -122,67 +198,50 @@ a {
     align-items: center;
     /* align vertical */
 }
+
 .movie-container .rating i {
-    font-size: var(--fontsize-title-smallest);
+    font-size: 14px;
     color: #FFD700;
     text-shadow: 0 0 3px #000;
     margin-right: var(--icon-distance-secondary);
-;
 }
-.movie-container .rating .rating-score {
-    font-size: var(--fontsize-title-smaller);
+.movie-container .rating-score {
+    font-size: 18px;
 }
-.movie-container .rating .rating-max {
-    font-size: var(--fontsize-text-large);
+.movie-container .rating-max {
     color: #696969;
+    font-size: 15px;
+    display: none;
 }
 
 /*****************************
 	responsive design
  *****************************/
+
 @media screen and (max-width: 1300px) {
+
     .movie-container {
-        width: 94%;
-        height: 160px;
-        margin-top: 15px;
 
-        box-shadow: none;
-        transition-property: none;
-        font-size: var(--fontsize-text);
-    }
-    .movie-container:hover, .movie-container:focus, .movie-container:active {-webkit-transform: none;
-        transform: none;
-        -moz-transform: none;
-        -ms-transform: none;
-
-        /*is this necessary, now that i've used media query for selection of devices with cursors?*/
     }
     .movie-container img {
-        width: 85px;
-        height: 100%;
+
     }
-    .movie-container #text {
-        margin: 5px 0 0 5px;
+    .movie-container .text {
+
     }
-    .movie-container #text #title-year {
-        font-size: 22px;
+    .movie-container .text .title-year {
     }
-    .movie-container #text #actors, .movie-container #text #awards {
-        font-size: 14px;
+    .movie-container .actors, .movie-container .awards {
+
     }
-    .movie-container #rating {
-        padding: 0 9px 0 9px;
-        flex-grow: 0.1;
-        min-width: 13%
+    .movie-container .rating {
     }
-    .movie-container #rating i {
-        font-size: 15px;
+    .movie-container .rating i {
     }
-    .movie-container #rating #rating-score {
-        font-size: 22px;
+    .movie-container .rating .rating-score {
+
     }
-    .movie-container #rating #rating-max {
-        font-size: 15px;
-        display: none;
+    .movie-container .rating .rating-max {
+
     }
 }
