done with test design but didnt change over yet

--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/testcss.css
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/testcss.css
@@ -214,6 +214,17 @@ a {
     display: none;
 }
 
+.save-to-favorites{
+    font-size: 32px;
+    color: var(--secondary-red);
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+    padding: 5px;
+    background-color: var(--background-grey);
+
+}
+
 /*****************************
 	responsive design
  *****************************/
