--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/design.css
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/design.css
@@ -12,9 +12,20 @@
 	--background-grey: #e7d2cc;
 	--gold: #FFD700;
 
+	--light-beige: #ffe4b3;
+
 	--icon-distance: 0.5em;
+	--icon-distance-secondary: 0.2em;
+
 	--font-title-main: 'Limelight', cursive;
 	--font-title-secondary: 'Calistoga', cursive;
+
+	--fontsize-title: 46px;
+	--fontsize-title-small: 36px;
+	--fontsize-title-smaller: 28px;
+	--fontsize-title-smallest: 22px;
+	--fontsize-text-large: 16px;
+	--fontsize-text: 13px;
 }
 
 .hide{
@@ -79,8 +90,6 @@ a {
 }
 /*TODO: style these divs
    	#favourite-movie-li .fa-trash:hover
-   	search-button
-   	trashcan
    	*/
 .btn:hover {
 	box-shadow: 0 0 .3em rgba(0, 0, 0, 0.25);
