--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/design.css
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/design.css
@@ -98,6 +98,21 @@ a {
 }
 
 /*****************************
+ 	section divider
+*****************************/
+
+.curved {
+	position: absolute;
+	top: 0;
+	background: var(--light-beige);
+	height: 55vh; /*need to change for mobile too*/
+	border-bottom-left-radius: 40% 5%;
+	border-bottom-right-radius: 40% 5%;
+	width: 100%;
+	z-index: -5555555;
+}
+
+/*****************************
 	img, title search bar and result container
 *****************************/
 
@@ -135,8 +150,9 @@ a {
 	background: #f1f1f1;
 }
 
-#result-container {
-	font-size: 25px;
+#result-container{
+	margin-top: 10px;
+	padding: 7px;
 }
 
 /*****************************
@@ -255,71 +271,150 @@ a {
 	fixed by adding z-index: 1; to sidebar
 	*/
 
-	width: 65%;
-	height: 165px;
+	/*width: 65%;*/
+	/*height: 165px;*/
+	/*background-color: var(--background-grey);*/
+	/*border-radius: 5px;*/
+	/*border: 1px solid grey;*/
+	/*margin: 15px auto 0;*/
+	/*text-align: left;*/
+
+	/*display: flex;*/
+	/*flex-direction: row;*/
+	/*justify-content: space-between;*/
+
+	/*box-shadow: 0 0 1px rgba(0, 0, 0, 0);*/
+	/*transition-duration: 0.3s;*/
+	/*transition-property: transform;*/
+
+	position: relative;
+	width: 100%;
+	height: 160px;
+	margin: 5px auto;
 	background-color: var(--background-grey);
-	border-radius: 5px;
-	border: 1px solid grey;
-	margin: 15px auto 0;
 	text-align: left;
 
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
-
-	box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-	transition-duration: 0.3s;
-	transition-property: transform;
-
 }
 
 .movie-container img {
-	width: 105px;
+	/*width: 105px;*/
+	/*height: 100%;*/
+	/*padding: 10px 0 10px 10px;*/
+	/*box-sizing: border-box;*/
+
 	height: 100%;
-	padding: 10px 0 10px 10px;
 	box-sizing: border-box;
+	width: 85px;
+
 }
-.movie-container #text {
-	flex-grow: 1;
+.movie-container .text {
+	/*flex-grow: 1;*/
+	/*box-sizing: border-box;*/
+	/*overflow-y: hidden;*/
+	/*margin: 10px 0 10px 10px;*/
+
+	margin: 0.5em;
 	box-sizing: border-box;
 	overflow-y: hidden;
-	margin: 10px 0 10px 10px;
+	font-size: var(--fontsize-text);
+	flex-grow: 1;
 }
-.movie-container #title-year {
-	font-size: 32px;
-	vertical-align: top;
+.movie-container .title-year {
+	/*font-size: 32px;*/
+
+	font-size: var(--fontsize-text-large);
 }
-.movie-container #actors, .movie-container #awards {
-	display: inline-block;
-	margin-top: 0;
-	font-size: 18px;
+.actors, .awards {
+	/*display: inline-block;*/
+	/*margin-top: 0;*/
+	/*font-size: 18px;*/
+
+	display: block;
+	font-size: 14px;
+	margin-top: 0.5em;
+
+
+	/*line-clamp hides the rows after n:th row*/
+	display: -webkit-box;
+	-webkit-box-orient: vertical;
+	overflow: hidden;
+	-webkit-line-clamp: 3; /*desktop = 4*/
 }
-.movie-container #rating {
+
+.movie-container .rating-container {
+	position: relative;
+	top: 0px;
+	right: 0px;
+	height: 65px;
+	width: 65px;
+	text-align: center;
+	border-bottom-left-radius: 100% ;
+
 	background: var(--main-red);
-	padding: 0;
-	min-width: 11%;
 
 	flex-grow: 0;
 	flex-shrink: 0;
+}
+
+.movie-container .rating {
+	/*background: var(--main-red);*/
+	/*padding: 0;*/
+	/*min-width: 11%;*/
+
+	/*flex-grow: 0;*/
+	/*flex-shrink: 0;*/
+	/*display: flex;*/
+	/*!*allows centering*!*/
+	/*justify-content: center;*/
+	/*!* align horizontal *!*/
+	/*align-items: center;*/
+	/*!* align vertical *!*/
+
+	/*this adjusts the text to the center of div*/
+	margin-right: -5px;
+	margin-top: 15px;
+
 	display: flex;
 	/*allows centering*/
 	justify-content: center;
 	/* align horizontal */
 	align-items: center;
 	/* align vertical */
+
 }
-.movie-container #rating i {
+.movie-container .rating i {
 	font-size: 20px;
 	color: #FFD700;
 	text-shadow: 0 0 3px #000;
 	margin-right: 5px;
 }
-.movie-container #rating #rating-score {
-	font-size: 30px;
-}
-.movie-container #rating #rating-max {
+.rating-score {
+	/*font-size: 30px;*/
+
 	font-size: 18px;
+
+}
+.rating-max {
+	/*font-size: 18px;*/
+	/*color: #696969;*/
+
 	color: #696969;
+	font-size: 15px;
+	display: none;
+}
+
+.save-to-favorites{
+	position: absolute;
+	bottom: 0px;
+	right: 0px;
+	padding: 5px;
+
+	font-size: 32px;
+	color: var(--secondary-red);
+	background-color: var(--background-grey);
 }
 
 /*****************************
