--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/design.css
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/design.css
@@ -59,7 +59,7 @@ html {
 	font-family: UbuntuRegular;
 
 }
-html, body, #container, #result-container {
+html, body, #container, .result-container {
 	height: 100%;
 	margin: 0;
 }
@@ -167,7 +167,7 @@ a {
 	background: #f1f1f1;
 }
 
-#result-container{
+.result-container{
 	margin-top: 10px;
 	padding: 7px;
 }
