--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/design.css
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/design.css
@@ -18,8 +18,8 @@
 	--icon-distance: 0.5em;
 	--icon-distance-secondary: 0.2em;
 
-	--font-title-main: 'Limelight', cursive;
-	--font-title-secondary: 'Calistoga', cursive;
+	--fontface-title: AbelRegular;
+	--fontface-standard: UbuntuRegular;
 
 	--fontsize-title: 46px;
 	--fontsize-title-small: 36px;
@@ -137,17 +137,20 @@ a {
 *****************************/
 
 #navbar{
+	position: fixed;
+	background-color: var(--main-red);
+	width: 100%;
+	height: 40px;
+	z-index: 1;
+
+	border-bottom-color: black;
+	border-bottom-style: solid;
+	border-bottom-width: 3px;
+
 	display: flex;
 	flex-direction: row;
-	justify-content: space-between;
-	background-color: lightslategrey;
-}
-
-.toggle-content{
-}
-
-#db-content{
-	cursor: pointer;
+	justify-content: space-around;
+	align-items: center;
 }
 
 /*****************************
@@ -155,15 +158,14 @@ a {
 *****************************/
 
 #title{
-	font-family: var(--font-title-main);
-	font-weight: normal;
-	font-size: 45px;
-	display: block;
-	font-family: AbelRegular;
+	font-family: var(--fontface-title);
+	font-weight: bold;
+	font-size: 60px;
+}
 
-	position: sticky;
-	top: 0;
-
+#subtitle{
+	font-size: var(--fontsize-title-smallest);
+	margin: 0.5em 0;
 }
 
 #search-box:focus, #search-form button{
@@ -171,7 +173,7 @@ a {
 }
 
 #logo img {
-	margin-top: 35px;
+	margin-top: 75px;
 	width: 250px;
 	height: 250px;
 }
@@ -555,63 +557,53 @@ a {
 }
 
 /*****************************
-	favourites movies list
-	using this as hamburger menu design
+	designing the div that hold favourite movies and its contents
+
+	using this as hamburger menu design //NOT USING ANYMORE, SEE COMMENTS BELOW
 	https://codepen.com/erikterwan/pen/EVzeRP
 
 	in hindsight, this design structure was a terrible choice
 	should've went with flexbox design
 	but rest of webpage sort of relies upon this, here and there
 	so it's a lesson learnt for future projects: dont use hacky solutions from the web
+
+	another update, a month or so after the comment above:
+	i finally got rid of the hacky input-toggle solution
+	should have done that a long time ago
 *****************************/
 
-/*
-this is the parent of the favourite movie sidebar
-*/
+/*****************************
+*****************************/
+
 #favourite-movies-container{
-	/*display: block;*/
-	position: fixed;
+	position: absolute;
+	background-color: var(--puke-green);
+	overflow: auto;
 
-	top: 30px;
-	left: 55px;
+	padding: 25px;
 
-	/*stops user from being able to select text here*/
-	-webkit-user-select: none;
-	user-select: none;
+	/*height: 100vh;*/
+	/*height: auto;*/
 
-	z-index: 1;
-	/*this is only to
-	prevent movie cards to be placed in front of sidebar
-	when a user hovers or focuses movie card*/
+	min-height: 100vh;
+
+	width: 275px;
+	/*if i set the width of the sidebar menu at the parent container
+	it blocks the content behind the sidebar, even when input-hamburger.unchecked
+	however, if i set the width here it doesn't block any content*/
 }
 
-/*
-designing the hamburger icon and transformation
-*/
-
-#slice1, #slice2, #slice3{
-	position: relative;
-	display: block;
-
-	/*styles the spans into slices*/
-	width: 33px;
-	height: 4px;
-	margin-bottom: 5px;
-	background: black;
-	border-radius: 3px;
-
-	/*this transforms the slices into an x shape*/
-	transform-origin: 4px 0;
-	transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-	background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-	opacity 0.55s ease;
-
-	/*makes it higher than the sidebar content, except for input toggle*/
-	z-index: 100;
+#favourite-movies-flex-container{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: start;
 }
+
 
 /*
 pulse grey on save to list
+//TODO CHANGE TO PULSE MAIN RED
 */
 .pulse-grey-animation{
 	-webkit-animation: pulse 1.0s 3 ease-in-out;
@@ -632,122 +624,10 @@ pulse grey on save to list
 	100% {background-color: black;}
 }
 
-/*slide sidebar in and out */
-#input-hamburger:checked ~ #favourite-movies-content-container {
-	transform: none;
-	/*
-	since there is no "display: none" when unchecked, it'll block any content underneath
-	circumvented by setting width on child container, instead of parent container
-	*/
-}
-
-@keyframes fade {
-	0% {
-		opacity: 0;
-	}
-
-	100% {
-		opacity: 1;
-	}
-}
-
-/*
- * Transform all the spans
- * into a crossmark.
- */
-#slice2{
-	transform-origin: 0 0;
-}
-
-#slice3{
-	transform-origin: 0 100%;
-}
-
-#input-hamburger:checked ~ #slice1, #input-hamburger:checked ~ #slice2, #input-hamburger:checked ~ #slice3{
-	opacity: 1;
-	transform: rotate(45deg) translate(-2px, -1px);
-	background: black;
-}
-
-/*
- * hide the middle span.
- */
-#input-hamburger:checked ~ #slice2 {
-	opacity: 0;
-	transform: rotate(0deg) scale(0.2, 0.2);
-}
-
-/*
-make last span go in other direction
- */
-#input-hamburger:checked ~ #slice3{
-	transform: rotate(-45deg) translate(0, -1px);
-}
-
-/*
-design the hidden input node
-*/
-#input-hamburger{
-	display: block;
-	position: absolute;
-
-	width: 40px;
-	height: 32px;
-	top: -7px;
-	left: -5px;
-	/*top: 30px;*/
-	/*left: 30px;*/
-
-	cursor: pointer;
-
-	opacity: 0; /* hide it */
-	z-index: 101; /* and place it over the hamburger */
-
-	/*removes ability for user to hold touch over a node and do things (see information?) */
-	-webkit-touch-callout: none;
-}
-
-/*****************************
-	designing the container for content
-*****************************/
-
-#favourite-movies-content-container{
-	margin: -100px 0 0 -55px;
-	padding: 25px;
-	padding-top: 90px;
-
-	/*height: 100vh;*/
-	/*height: auto;*/
-
-	min-height: 100vh;
-
-	width: 275px;
-	/*if i set the width of the sidebar menu at the parent container
-	it blocks the content behind the sidebar, even when input-hamburger.unchecked
-	however, if i set the width here it doesn't block any content*/
-
-	background-color: var(--puke-green);
-
-	-webkit-font-smoothing: antialiased;
-	/* to stop flickering of text in safari */
-
-	transform-origin: 0 0;
-	transform: translate(-100%, 0);
-
-	transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
-
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: start;
-	overflow-y: auto;
-	/*	not working scroll*/
-}
-
 #favourite-movies-container h3{
 	display: inline-block;
 	font-size: 25px;
-	font-family: var(--font-title-secondary);
+	font-family: var(--fontface-standard);
 	font-weight: normal;
 	margin-top: 0;
 
@@ -835,7 +715,7 @@ hr {
 }
 
 #auth-welcome{
-	font-family: var(--font-title-main);
+	font-family: var(--fontface-title);
 	font-family: AbelRegular;
 	font-size: 24px;
 }
@@ -946,6 +826,9 @@ hr {
 	#title{
 		font-size: 30px;
 	}
+	#subtitle{
+		font-size: var(--fontsize-title-smallest);
+	}
 	#logo img {
 		width: 45vw;
 		height: 45vw;
@@ -1016,14 +899,6 @@ hr {
 	makes the hamburger menu display: none (and not slide) on mobile devices
 	so it doesn't block content underneath
 	*/
-	#input-hamburger:checked ~ #favourite-movies-content-container {
-		transform: none;
-	}
-	#input-hamburger:not(:checked) ~ #favourite-movies-content-container {
-		display: none;
-		opacity: 0;
-		visibility: hidden;
-	}
 	.modal-content{
 		height: 90px;
 	}
