--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/design.css
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/design.css
@@ -217,7 +217,7 @@ a {
 	font-size: 20px;
 	margin-left: var(--icon-distance);
 	box-shadow: 0 0 .3em rgba(0, 0, 0, 0.25);
-
+	color: var(--color-accent-whiteblack);
 }
 
 #search-form input {
